[tool.poetry]
name = "pysnake"
version = "0.1.0"
description = "A Snake clone in Pygame."
authors = ["Axel Rodríguez Chang <axelrodriguez@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
